force-app/main/default/objects/Sound__c/Sound__c.object-meta.xml
<CustomObject>
    <label>Sound</label>
    <nameField>
        <label>Sound Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>