force-app/main/default/objects/Sound__c/fields/Audio_IMG__c.field-meta.xml
<CustomField>
    <fullName>Audio_IMG__c</fullName>
    <label>Audio IMG</label>
    <type>Url</type>
</CustomField>