force-app/main/default/objects/Sound__c/fields/Audio_Src__c.field-meta.xml
<CustomField>
    <fullName>Audio_Src__c</fullName>
    <description>https://ddo000001c7kima0-dev-ed--c.develop.vf.force.com/resource/1682633351000/audio</description>
    <formula>IF(audioUpload__c = TRUE, &quot;/resource/1682633351000/audio&quot;, &quot;/resource/1682633351000/audio&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audio_Src</label>
    <type>Text</type>
</CustomField>