force-app/main/default/objects/Sound__c/fields/audioUpload__c.field-meta.xml
<CustomField>
    <fullName>audioUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>audioUpload</label>
    <type>Checkbox</type>
</CustomField>