force-app/main/default/objects/Sound__c/fields/resource_id__c.field-meta.xml
<CustomField>
    <fullName>resource_id__c</fullName>
    <label>resource id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>